<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.payflow</groupId>
  <artifactId>payment-orchestration</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Payment Orchestration Service</name>
  <description>A backend system-design playground built as a portfolio project -- a payments pipeline is the vehicle, not the point</description>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <!-- 3.3.13, not 3.3.4: spring-cloud-gateway-server:4.1.9 (pulled in by
         the API gateway module) calls HttpHeaders.headerSet(), added to
         Spring Framework between 6.1.13 (Boot 3.3.4) and 6.1.21 (Boot
         3.3.13), confirmed by a NoSuchMethodError at gateway runtime
         before this bump. Still 3.3.x, no breaking Boot changes. -->
    <version>3.3.13</version>
    <relativePath/>
  </parent>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Spring Boot 3.3.4 manages an older Testcontainers whose docker-java
         client can't parse responses from newer Docker Engine versions. -->
    <testcontainers.version>1.21.3</testcontainers.version>
  </properties>

  <modules>
    <module>common</module>
    <module>payment-api</module>
    <module>saga-orchestrator</module>
    <module>fraud-service</module>
    <module>funds-auth-service</module>
    <module>ledger-service</module>
    <module>settlement-service</module>
    <module>notification-service</module>
    <module>read-model-service</module>
    <module>api-gateway</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.payflow</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- Spring Boot's own BOM doesn't manage Resilience4j: it's a
           third-party project with its own release cadence. -->
      <dependency>
        <groupId>io.github.resilience4j</groupId>
        <artifactId>resilience4j-bom</artifactId>
        <version>2.3.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Spring Boot's own BOM doesn't manage Spring Cloud either,
           same reasoning as Resilience4j above. 2023.0.x ("Leyton") is
           the release train compatible with Spring Boot 3.3.x. -->
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>2023.0.6</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
